--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-machine-id",
+  "name": "@cubejs-backend/machine-id",
   "version": "1.1.12",
   "main": "./dist/index.js",
   "types": "./types/index.d.ts",
