--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,7 +5,7 @@ on:
   - pull_request
 
 jobs:
-  npm:
+  build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
@@ -20,5 +20,7 @@ jobs:
         uses: borales/actions-yarn@v2.3.0
         with:
           cmd: install --frozen-lockfile
+      - name: Build
+        run: npm run build
       - name: Tests
         run: npm run test
